# prediction-market-quickstart

./: .gitignore  README.md  ape-config.yaml  pyproject.toml
contracts/dependencies/sandbox/: AddressWhitelistContract.sol  AncillaryDataInterface.sol  FinderContract.sol  IdentifierWhitelistContract.sol  MockAncillaryContract.sol  OOV3.sol  StoreContract.sol  TestERC20.sol
contracts/src/: PredictionMarket.vy
contracts/src/modules/: ERC20.vy  ExpandedERC20.vy  OutComeTokenFactory.vy  constants.vy
contracts/src/modules/interfaces/: ExpandedIERC20.vyi  FinderInterface.vyi  IAddressWhitelist.vyi  IAncillaryDataInterface.vyi  IERC20.vyi  IOptimisticOracleV3.vyi  IOptimisticOracleV3CallbackRecipient.vyi
scripts/: deployments.json  market.py  utils.py
scripts/oracle_sand_box/: deploy.py  oracle.py
tests/: conftest.py  constants.py  test_market.py
